[gd_scene load_steps=17 format=2]

[ext_resource path="res://Sprites/cprotagidle.png" type="Texture" id=1]
[ext_resource path="res://Objects/Player.gd" type="Script" id=2]
[ext_resource path="res://Sprites/walksheetadjusted.png" type="Texture" id=3]
[ext_resource path="res://Sound/footstepsshort.ogg" type="AudioStream" id=4]
[ext_resource path="res://Sprites/gunidle.png" type="Texture" id=5]
[ext_resource path="res://Sound/gunshot2.ogg" type="AudioStream" id=6]
[ext_resource path="res://Sprites/flash.png" type="Texture" id=7]
[ext_resource path="res://Sprites/laser.png" type="Texture" id=8]
[ext_resource path="res://Sound/click.ogg" type="AudioStream" id=9]
[ext_resource path="res://Sound/riser.ogg" type="AudioStream" id=10]
[ext_resource path="res://Sound/cock.ogg" type="AudioStream" id=11]

[sub_resource type="CircleShape2D" id=1]
radius = 143.922

[sub_resource type="Animation" id=2]
resource_name = "Fire"
length = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Flash:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=3]
resource_name = "GameOver"
length = 2.5
tracks/0/type = "audio"
tracks/0/path = NodePath("PickupSound")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 11 )
} ],
"times": PoolRealArray( 0 )
}
tracks/1/type = "method"
tracks/1/path = NodePath("PickupSound")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7, 2.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "stop"
}, {
"args": [  ],
"method": "stop"
} ]
}

[sub_resource type="Animation" id=4]
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Walking:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 2, 1, 0, 4, 5, 6, 5, 4 ]
}

[sub_resource type="CircleShape2D" id=5]

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
scale = Vector2( 4, 4 )
collision_mask = 6
script = ExtResource( 2 )

[node name="MainCollision" type="CollisionShape2D" parent="."]
scale = Vector2( 0.0720578, 0.0720578 )
shape = SubResource( 1 )

[node name="Pointer" type="Node2D" parent="."]
scale = Vector2( 0.2, 0.2 )

[node name="Laser" type="RayCast2D" parent="Pointer"]
rotation = -1.5708
cast_to = Vector2( 0, 1000 )
collision_mask = 2147483654
collide_with_areas = true

[node name="LaserSprite" type="Sprite" parent="Pointer"]
position = Vector2( 566.178, 28.0978 )
scale = Vector2( 14.2052, -2.63717 )
texture = ExtResource( 8 )

[node name="Walking" type="Sprite" parent="."]
texture = ExtResource( 3 )
vframes = 4
hframes = 2

[node name="Idle" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="GunIdle" type="Sprite" parent="."]
texture = ExtResource( 5 )

[node name="Flash" type="Sprite" parent="."]
texture = ExtResource( 7 )

[node name="GunAnimation" type="AnimationPlayer" parent="."]
anims/Fire = SubResource( 2 )
anims/GameOver = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Walk = SubResource( 4 )

[node name="StepTimer" type="Timer" parent="."]
wait_time = 0.58

[node name="GunTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="ClickTimer" type="Timer" parent="."]
wait_time = 0.25

[node name="EndTimer" type="Timer" parent="."]
wait_time = 2.5

[node name="GunSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -5.0

[node name="FootstepSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -15.0
pitch_scale = 0.8

[node name="EndSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
pitch_scale = 1.5

[node name="PickupSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -10.0
pitch_scale = 0.8

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -15.0
pitch_scale = 0.8

[node name="Hitbox" type="Area2D" parent="."]
scale = Vector2( 0.0720578, 0.0720578 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
scale = Vector2( 1e-05, 1e-05 )
shape = SubResource( 5 )
[connection signal="timeout" from="StepTimer" to="." method="_on_StepTimer_timeout"]
[connection signal="timeout" from="GunTimer" to="." method="_on_GunTimer_timeout"]
[connection signal="timeout" from="ClickTimer" to="." method="_on_ClickTimer_timeout"]
[connection signal="timeout" from="EndTimer" to="." method="_on_EndTimer_timeout"]
